[project]
name = "vortex"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nicholas Gates", email = "nick@nickgates.com" }
]
dependencies = [
    "pyarrow>=15.0.0",
]
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
    "pandas>=2.2.2",
    "pip",
]

[tool.maturin]
python-source = "python"
module-name = "vortex._lib"
features = ["pyo3/extension-module"]
include = [{ path = "rust-toolchain.toml", format = "sdist" }]
