[project]
name = "vortex-array"
# Maturin copies these, at build time, from Cargo.toml.
# https://github.com/PyO3/maturin/blob/main/src/metadata.rs#L127-L129
dynamic = ["version", "description", "authors"]
readme = "README.md"
dependencies = [
    "pyarrow>=15.0.0",
]
requires-python = ">= 3.11"

[project.urls]
Documentation = "https://spiraldb.github.io/vortex/docs/"
Changelog = "https://github.com/spiraldb/vortex/blob/develop/CHANGELOG.md"
Issues = "https://github.com/spiraldb/vortex/issues"
Benchmarks = "https://spiraldb.github.io/vortex/dev/bench/"

[build-system]
requires = ["maturin>=1.7.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
    "pandas>=2.2.2",
    "pip",
]

[tool.maturin]
python-source = "python"
module-name = "vortex._lib"
features = ["pyo3/extension-module"]
include = [
    { path = "rust-toolchain.toml", format = "sdist" },
    { path = "README.md", format = "sdist" },
]
