[package]
name = "vortex-alloc"
version = { workspace = true }
description = "Vortex allocator"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
allocator-api2 = { workspace = true }

[lints]
workspace = true
