[package]
name = "vortex-alp"
version = { workspace = true }
description = "Vortex ALP array"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
vortex-array = { path = "../vortex-array" }
vortex-schema = { path = "../vortex-schema" }
linkme = "0.3.22"
itertools = "0.12.1"
num-traits = "0.2.18"
log = { version = "0.4.20", features = [] }

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "alp_compress"
harness = false