[package]
name = "vortex-alp"
version = { workspace = true }
description = "Vortex ALP array"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
vortex-array = { path = "../vortex-array" }
vortex-schema = { path = "../vortex-schema" }
linkme = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "alp_compress"
harness = false