[package]
name = "vortex-alp"
version = { workspace = true }
description = "Vortex ALP array"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
itertools = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vortex-array = { path = "../vortex-array" }
vortex-error = { path = "../vortex-error" }
vortex-schema = { path = "../vortex-schema" }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "alp_compress"
harness = false