[package]
name = "vortex-array"
version = { workspace = true }
description = "Vortex in memory columnar data format"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "vortex"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
allocator-api2 = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
enum-iterator = { workspace = true }
flatbuffers = { workspace = true }
flexbuffers = { workspace = true }
humansize = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
leb128 = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
vortex-alloc = { path = "../vortex-alloc" }
vortex-dtype = { path = "../vortex-dtype", features = ["serde"] }
vortex-error = { path = "../vortex-error", features = ["flexbuffers"] }
vortex-flatbuffers = { path = "../vortex-flatbuffers" }
vortex-scalar = { path = "../vortex-scalar", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
flatc = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "search_sorted"
harness = false

[[bench]]
name = "scalar_subtract"
harness = false
