[package]
name = "vortex-array"
version = { workspace = true }
description = "Vortex in memory columnar data format"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "vortex"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
enum-iterator = { workspace = true }
flatbuffers = { workspace = true }
flexbuffers = { workspace = true }
futures-util = { workspace = true }
humansize = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
vortex-buffer = { path = "../vortex-buffer" }
vortex-dtype = { path = "../vortex-dtype", features = ["flatbuffers", "serde"] }
vortex-error = { path = "../vortex-error", features = ["flexbuffers"] }
vortex-expr = { path = "../vortex-expr" }
vortex-flatbuffers = { path = "../vortex-flatbuffers" }
vortex-scalar = { path = "../vortex-scalar", features = ["flatbuffers", "serde"] }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable the JS feature of getrandom (via rand) to supprt wasm32 target
getrandom = { workspace = true, features = ["js"] }

[build-dependencies]
build-vortex = { path = "../build-vortex" }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "search_sorted"
harness = false

[[bench]]
name = "scalar_subtract"
harness = false

[[bench]]
name = "filter_indices"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "compare_scalar"
harness = false
