[package]
name = "vortex-array"
description = "Vortex in memory columnar data format"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[lib]
name = "vortex"
path = "src/lib.rs"
bench = false

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
bytes = { workspace = true }
enum-iterator = { workspace = true }
flatbuffers = { workspace = true, optional = true }
flexbuffers = { workspace = true, optional = true }
futures-util = { workspace = true }
humansize = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
vortex-buffer = { workspace = true }
vortex-datetime-dtype = { workspace = true }
vortex-dtype = { workspace = true }
vortex-error = { workspace = true }
vortex-flatbuffers = { workspace = true, optional = true }
vortex-scalar = { workspace = true }

[features]
default = ["flatbuffers", "serde"]
arbitrary = ["dep:arbitrary", "vortex-dtype/arbitrary"]
flatbuffers = [
    "dep:flatbuffers",
    "dep:flexbuffers",
    "dep:vortex-flatbuffers",
    "vortex-flatbuffers/array",
    "vortex-dtype/flatbuffers",
    "vortex-error/flatbuffers",
    "vortex-error/flexbuffers",
    "vortex-scalar/flatbuffers",
]
serde = ["vortex-dtype/serde", "vortex-scalar/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable the JS feature of getrandom (via rand) to supprt wasm32 target
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "search_sorted"
harness = false

[[bench]]
name = "scalar_subtract"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "fn"
harness = false
