[package]
name = "vortex-buffer"
description = "A byte buffer implementation for Vortex"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[features]
flexbuffers = ["dep:flexbuffers"]

[dependencies]
arrow-buffer = { workspace = true }
bytes = { workspace = true }
flexbuffers = { workspace = true, optional = true }

[lints]
workspace = true
