[package]
name = "vortex-dict"
version = { workspace = true }
description = "Vortex dictionary array"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ahash = "0.8.11"
half = { workspace = true }
hashbrown = "0.14.3"
linkme = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
vortex-array = { path = "../vortex-array" }
vortex-schema = { path = "../vortex-schema" }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
log = "0.4.20"
rand = "0.8.5"
simplelog = { version = "0.12.1", features = ["paris"] }

[[bench]]
name = "dict_compress"
harness = false