[package]
name = "vortex-dict"
version = { workspace = true }
description = "Vortex dictionary array"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ahash = { workspace = true }
half = { workspace = true }
hashbrown = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
vortex-array = { path = "../vortex-array" }
vortex-schema = { path = "../vortex-schema" }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
simplelog = { workspace = true }

[[bench]]
name = "dict_compress"
harness = false