[package]
name = "vortex-dtype"
version = { workspace = true }
description = "Vortex schema"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
flatbuffers = { workspace = true, optional = true }
half = { workspace = true, features = ["num-traits"] }
itertools = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["rc", "derive"] }
vortex-error = { workspace = true }
vortex-flatbuffers = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_test = { workspace = true }

[build-dependencies]
vortex-build = { workspace = true }

[lints]
workspace = true

[features]
# Uncomment for improved IntelliJ support
# default = ["flatbuffers", "proto", "serde"]
flatbuffers = ["dep:flatbuffers"]
proto = ["dep:prost"]
serde = ["dep:serde"]
