[package]
name = "vortex-dtype"
version = { workspace = true }
description = "Vortex's core type system"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }

[lib]
name = "vortex_dtype"
path = "src/lib.rs"
bench = false

[dependencies]
arbitrary = { workspace = true, optional = true }
flatbuffers = { workspace = true, optional = true }
half = { workspace = true, features = ["num-traits"] }
itertools = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["rc", "derive"] }
vortex-error = { workspace = true }
vortex-flatbuffers = { workspace = true, optional = true }
vortex-proto = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true

[features]
flatbuffers = [
    "dep:flatbuffers",
    "dep:vortex-flatbuffers",
    "vortex-error/flatbuffers",
    # enable flatbuffers generated code for scalar
    "vortex-flatbuffers/dtype",
]
proto = ["dep:prost", "vortex-proto/dtype"]
serde = ["dep:serde"]
