[package]
name = "vortex-duckdb"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
vortex-array = { path = "../vortex-array" }
vortex-dtype = { path = "../vortex-dtype" }

duckdb = { workspace = true, features = ["vtab", "vtab-loadable", "bundled"] }
duckdb-loadable-macros = { workspace = true }

[lints]
workspace = true
