[package]
name = "vortex-error"
version = { workspace = true }
description = "Vortex errors"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "vortex_error"
path = "src/lib.rs"

[dependencies]
arrow-schema = { workspace = true }
flatbuffers = { workspace = true }
parquet = { workspace = true, optional = true }
thiserror = { workspace = true }
vortex-flatbuffers = { path = "../vortex-flatbuffers" }
vortex-schema = { path = "../vortex-schema" }

[lints]
workspace = true
