[package]
name = "vortex-error"
version = { workspace = true }
description = "Vortex errors"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "vortex_error"
path = "src/lib.rs"

[dependencies]
arrow-schema = { workspace = true }
flatbuffers = { workspace = true, optional = true }
flexbuffers = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
thiserror = { workspace = true }
worker = { workspace = true, optional = true }

[lints]
workspace = true
